# turbograph-v3

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE  reset.sh  test_partitioning.sh
s62-api-server/: CMakeLists.txt  README.md
s62-api-server/include/: capi_internal.hpp
s62-api-server/src/: s62-c.cpp
s62-client/: CMakeLists.txt  README.md
s62-client/include/connection/: s62_connection_apis.hpp  s62_connection_server.hpp
s62-client/include/main/: client_context.hpp  database.hpp  query_profiler.hpp
s62-client/src/connection/: s62_connection_apis.cpp
s62-client/src/main/: client_context.cpp  client_data.cpp  database.cpp  query_profiler.cpp
s62-client/test/: S62_CLI.cpp  connection_server_run.cpp  dump_s62_mda.cpp  s62_cli.cpp
s62-compiler/: CMakeLists.txt  README.md
s62-compiler/gpdb/: CMakeLists.txt
s62-compiler/include/mdprovider/: MDProviderS62.h
s62-compiler/include/planner/: logical_plan.hpp  logical_schema.hpp  planner.hpp  value_ser_des.hpp
s62-compiler/kuzu/: CMakeLists.txt
s62-compiler/src/mdprovider/: MDProviderS62.cpp
s62-compiler/src/planner/: planner.cpp  planner_logical.cpp  planner_logical_scalar.cpp  planner_logical_scalar_duckdb.cpp  planner_physical.cpp  planner_physical_scalar.cpp
s62-compiler/test/: kuzu_integration_test.cpp
s62-execution-engine/: CMakeLists.txt  README.md
s62-execution-engine/include/: typedef.hpp
s62-execution-engine/include/execution/: aggregate_hashtable.hpp  base_aggregate_hashtable.hpp  cypher_pipeline.hpp  cypher_pipeline_executor.hpp  execution_context.hpp  join_hashtable.hpp  radix_partitioned_hashtable.hpp  schema_flow_graph.hpp
s62-execution-engine/include/parallel/: event.hpp  task_scheduler.hpp  thread_context.hpp
s62-execution-engine/include/storage/: graph_store.hpp
s62-execution-engine/src/execution/: base_aggregate_hashtable.cpp  cypher_pipeline_executor.cpp  join_hashtable.cpp  partitionable_hashtable.cpp  radix_partitioned_hashtable.cpp  top_n_sort.cpp
s62-execution-engine/src/parallel/: event.cpp  execution_task.cpp  executor.cpp
s62-execution-engine/src/storage/: graph_store.cpp  livegraph_catalog.cpp
s62-execution-engine/test/: bulkload_json.cpp  bulkload_using_map.cpp  livegraph_demo_main.cpp
s62-execution-engine/test/old_plans/: query_plan_suite.hpp
s62-graph-store/: CMakeLists.txt  README.md
s62-graph-store/include/cache/: cache_data_transformer.h  chunk_cache_manager.h  client.h  memory.h
s62-graph-store/include/catalog/: catalog.hpp  catalog_entry.hpp  catalog_server.hpp  catalog_set.hpp  catalog_wrapper.hpp  coalescing.hpp  standard_entry.hpp
s62-graph-store/include/extent/: adjlist_iterator.hpp  extent_iterator.hpp  extent_manager.hpp
s62-graph-store/include/index/: index.hpp  scan_state.hpp
s62-graph-store/include/schemaless/: schema_hash_table.hpp
s62-graph-store/include/statistics/: histogram_generator.hpp
s62-graph-store/src/cache/: cache_data_transformer.cc  chunk_cache_manager.cc  client.cc  malloc.cc  store.cc
s62-graph-store/src/catalog/: catalog.cpp  catalog_entry.cpp  catalog_search_path.cpp  catalog_server.cpp  catalog_set.cpp  dependency_manager.cpp
s62-graph-store/src/extent/: adjlist_iterator.cpp  extent_iterator.cpp  extent_manager.cpp
s62-graph-store/src/index/: index.cpp
s62-graph-store/src/statistics/: histogram_generator.cpp
s62-graph-store/test/: catalog_test_catalog_server.cpp
s62-graph-store/test/catalog/: catalog_test_catalog_server.cpp  catalog_test_shared_memory2.cc
s62-graph-store/test/extent/: extent_test_csv_reader.cc  extent_test_json_reader.cc
s62-graph-store/test/schemaless/: schemaless_simulation.cpp
src/: CMakeLists.txt
src/analytics/: CMakeLists.txt
src/analytics/core/: Global.cpp  RequestRespond.cpp  TG_DistributedVectorBase.cpp  TG_NWSM_Utility.cpp  TurboDB.cpp  TypeDef.cpp  eXDB_dist_internal.cpp  turbo_buffer_frame.cpp  turbo_buffer_manager.cpp  turbo_callback.cpp  turbo_dist_internal.cpp  turbo_tcp.cpp
src/analytics/datastructure/: MaterializedAdjacencyLists.cpp  VersionedArray.cpp
src/analytics/io/: Turbo_bin_aio_handler.cpp  common.cpp  disk_aio_factory.cpp  disk_aio_interface.cpp  disk_aio_request.cpp  disk_aio_thread.cpp  log.cpp  thread.cpp
src/analytics/util/: Aio_Helper.cpp  TG_NWSM_Utility.cpp  json11.cpp  timer.cpp  util.cpp
src/catalog/: catalog.cpp  catalog_set.cpp
src/catalog/catalog_entry/: table_catalog_entry.cpp
src/catalog/default/: default_views.cpp
src/common/: constants.cpp  string_util.cpp  types.cpp
src/common/enums/: expression_type.cpp
src/common/types/: data_chunk.cpp  filtered_data_chunk.cpp  schema.cpp  vector.cpp
src/common/vector_operations/: vector_copy.cpp
src/converter/: CMakeLists.txt
src/converter/c2o/: cypher2orca_converter.cpp
src/execution/expression_executor/: execute_reference.cpp
src/function/: function.cpp
src/include/analytics/: AnalyticsQueryDriver.hpp  Turbograph.hpp
src/include/catalog/: catalog.hpp  catalog_set.hpp  catalog_wrapper.hpp
src/include/common/: constants.hpp  copy_constructors.hpp  graph_simdcsv_parser.hpp  graph_simdjson_parser.hpp  output_util.hpp  string_util.hpp  typedefs.hpp
src/include/execution/: schema_flow_graph.hpp
src/include/function/: function.hpp
src/include/main/: client_context.hpp  query_profiler.hpp
src/include/parser/: base_expression.hpp  cypher_statement.hpp  parsed_expression.hpp  parser.hpp  query_error_context.hpp  tableref.hpp  tokens.hpp  transformer.hpp
src/include/planner/: binder.hpp  binder_scope.hpp  bound_statement.hpp  bound_statement_result.hpp  bound_tokens.hpp  column_binding.hpp  expression.hpp  planner.hpp  (+2 more)
src/main/: client_context.cpp
src/optimizer/: CMakeLists.txt
src/parser/: parsed_expression_iterator.cpp  parser.cpp  query_error_context.cpp  query_node.cpp  transformer.cpp
src/planner/: binder.cpp  planner.cpp  planner_logical.cpp  planner_logical_scalar.cpp  planner_logical_scalar_duckdb.cpp  planner_physical.cpp  pragma_handler.cpp
src/storage/: graph_storage_wrapper.cpp
tools/: CMakeLists.txt  bulkload.cpp  client.cpp  pr_int.cpp
(+1291 files in other folders)
